// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pager can render a pager 1`] = `
<div>
  
  
  <nav
    aria-labelledby=""
    class="pager"
    role="navigation"
  >
    
    
    <h4
      class="visually-hidden"
      id=""
    >
      Pagination
    </h4>
    
    
    <ul
      class="pager__items js-pager__items"
    >
      
      
            
            
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          0
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item  is-active"
      >
        
                    
        <a
          class="pager__link  is-active"
          href="#"
          title="Current page"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Current page
            
          </span>
          1
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          2
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          3
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          4
        </a>
        
        
      </li>
      
            
            
          
    </ul>
    
  
  </nav>
  

</div>
`;

exports[`pager can render a pager with ellipses 1`] = `
<div>
  
  
  <nav
    aria-labelledby=""
    class="pager"
    role="navigation"
  >
    
    
    <h4
      class="visually-hidden"
      id=""
    >
      Pagination
    </h4>
    
    
    <ul
      class="pager__items js-pager__items"
    >
      
      
            
            
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          0
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          1
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          2
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          3
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          4
        </a>
        
        
      </li>
      
            
              
      <li
        class="pager__item pager__item--ellipsis"
        role="presentation"
      >
        …
      </li>
      
            
              
      <li
        class="pager__item pager__item--next"
      >
        
          
        <a
          class="pager__link pager__link--next"
          href="#"
          rel="next"
          title="Go to next page"
        >
          
            
          <span
            class="visually-hidden"
          >
            Next page
          </span>
          
            
          <span
            aria-hidden="true"
          >
            Next ›
          </span>
          
          
        </a>
        
        
      </li>
      
          
    </ul>
    
  
  </nav>
  

</div>
`;

exports[`pager can render a pager with prev and next ellipses 1`] = `
<div>
  
  
  <nav
    aria-labelledby=""
    class="pager"
    role="navigation"
  >
    
    
    <h4
      class="visually-hidden"
      id=""
    >
      Pagination
    </h4>
    
    
    <ul
      class="pager__items js-pager__items"
    >
      
      
              
      <li
        class="pager__item pager__item--prev"
      >
        
          
        <a
          class="pager__link pager__link--prev"
          href="#"
          rel="prev"
          title="Go to previous page"
        >
          
            
          <span
            class="visually-hidden"
          >
            Previous page
          </span>
          
            
          <span
            aria-hidden="true"
          >
            ‹ Previous
          </span>
          
          
        </a>
        
        
      </li>
      
            
              
      <li
        class="pager__item pager__item--ellipsis"
        role="presentation"
      >
        …
      </li>
      
            
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          0
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          1
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          2
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          3
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          4
        </a>
        
        
      </li>
      
            
              
      <li
        class="pager__item pager__item--ellipsis"
        role="presentation"
      >
        …
      </li>
      
            
              
      <li
        class="pager__item pager__item--next"
      >
        
          
        <a
          class="pager__link pager__link--next"
          href="#"
          rel="next"
          title="Go to next page"
        >
          
            
          <span
            class="visually-hidden"
          >
            Next page
          </span>
          
            
          <span
            aria-hidden="true"
          >
            Next ›
          </span>
          
          
        </a>
        
        
      </li>
      
          
    </ul>
    
  
  </nav>
  

</div>
`;

exports[`pager can render a pager with prev ellipses 1`] = `
<div>
  
  
  <nav
    aria-labelledby=""
    class="pager"
    role="navigation"
  >
    
    
    <h4
      class="visually-hidden"
      id=""
    >
      Pagination
    </h4>
    
    
    <ul
      class="pager__items js-pager__items"
    >
      
      
              
      <li
        class="pager__item pager__item--prev"
      >
        
          
        <a
          class="pager__link pager__link--prev"
          href="#"
          rel="prev"
          title="Go to previous page"
        >
          
            
          <span
            class="visually-hidden"
          >
            Previous page
          </span>
          
            
          <span
            aria-hidden="true"
          >
            ‹ Previous
          </span>
          
          
        </a>
        
        
      </li>
      
            
              
      <li
        class="pager__item pager__item--ellipsis"
        role="presentation"
      >
        …
      </li>
      
            
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          0
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          1
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          2
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          3
        </a>
        
        
      </li>
      
                      
      <li
        class="pager__item "
      >
        
                    
        <a
          class="pager__link "
          href="#"
          title="Go to page @key"
        >
          
            
          <span
            class="visually-hidden"
          >
            
              Page 
            
          </span>
          4
        </a>
        
        
      </li>
      
            
            
          
    </ul>
    
  
  </nav>
  

</div>
`;
